--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <h2>Privacy Policy</h2> <p> Mahmoud Assaf  built the Mosafer  app as a Free app. This SERVICE is provided by
+    <h2>Privacy Policy</h2> <p> Mahmoud Assaf  built the <a href="https://play.google.com/store/apps/details?id=com.mahmoud.mosafer&rdid=com.mahmoud.mosafer">Mosafer</a>  app as a Free app. This SERVICE is provided by
                     Mahmoud Assaf  at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
